CHANGELOG

Version 1.4.1.1
 - Added Tables INV, INVLINES
 - Added Tables ITEMMASTER, DOC, DOCLINES
 - Add InvoiceNum, STONum, SalesReturnNum and CustomerCode at TBLMAINTENACE
 - Add field SALESID and COSTID at TBLITEM
 - Add view STOCK_CARD
 - Add Reports - Inventory Report, Sales Report
 - Update TBLCASH and TBLITEM
 - Can transact SALES, AUCTION REDEEM, IMD, STOCK IN/OUT (Item Pullout is not included here, use the Pullout Module)
 - Can Generate SAP Template Based STO for STOCK OUT
 - Change DB Version 1.2.3.1
 - HOLDS AUCTION REDEEM at TBLCASH
 - Remove Insurance on JE and CashCount
 - Fix Minor Problems in Company Encryption

Version 1.3.1.1
 - Fix Bug in Pawned Item Computation
 - Fix Pawn_list View Full Address
 - Fix No Display Pawner Name in Triplicate
 - Fix Amount To Words Indian Language

Version 1.3.1
 - Fix Reprint Save
 - Fix ORNum and ORDate on database
 - Fix Wrong Printing OR information
 - Fix bug in Loan Register
 - Fix not displaying Old and New PT in OR receipt
 - Fix double entry in saving void transaction
 - Fix New Pawnticket issue on OR Numbers
 - Included Transaction number in remarks in every void transaction
 - Removed Checking Authorization in every renew
 - Added Remarks field in table OTP
 - Added Tables OPI, PI1, OPT, TBLITEM, TBLSPECS, TBLINTSCHEMES, TBLINTSCHEME_DETAILS
 - Added View PAWN_LIST

Version 1.2.3.9
 - Requires OTP alone in Pullout Module, nullify the privilege 
 - Fix Expiry Generator, get whole month

Version 1.2.3.7
 - Add Audit Console (Base on Maam Irish Needs)
 - Add RePrint indicator on PT and OR
 - Add Disable User Account
 - Add Void Report
 - Add Data Extractor
 - No Posting if No Entries, place atleast zero (0) value
 - Fix Pawning Bug
 - Fix Minor Problems on Journal Entries
 - Fix on Displaying Computation
 - Fix Redeem Report
 - Fix Minor Journal Entry Problem
 - Fix Item Pullout Report Date Problem
 - Fix Redemption Report Summary
 - Fix Load Report Void display
 - Sanitize fields

Version 1.2.2.12