@@ -22,7 +22,6 @@ Public Class frmExtractor
     End Sub
 
     Private Sub frmExtractor_Load(ByVal sender As System.Object, ByVal e As System.EventArgs) Handles MyBase.Load
-        FormInit()
         'Load Path
         txtPath.Text = Environment.GetFolderPath(Environment.SpecialFolder.Desktop)
     End Sub
@@ -135,6 +134,8 @@ Public Class frmExtractor
             oSheet.Cells(1, col).value = hd
             col += 1
         Next
+
+        FormInit()
 
         Dim verified_url As String
         If txtPath.Text.Split(".").Count > 1 Then
@@ -250,14 +251,14 @@ Public Class frmExtractor
         Select Case FormType
             Case ExtractType.Expiry
                 Console.WriteLine("Expiry Type Activated")
-                sfdPath.FileName = String.Format("{1}{0}.xls", sd.ToString("MMddyyyy"), BranchCode)  'BranchCode + Date
+                sfdPath.FileName = String.Format("{1}{0}.xls", CurrentDate.ToString("MMddyyyy"), BranchCode)  'BranchCode + Date
                 Me.Text &= " - Expiry"
             Case ExtractType.JournalEntry
                 Console.WriteLine("Journal Entry Type Activated")
-                sfdPath.FileName = String.Format("JRNL{0}{1}.xls", sd.ToString("yyyyMMdd"), BranchCode) 'JRNL + Date + BranchCode
+                sfdPath.FileName = String.Format("JRNL{0}{1}.xls", CurrentDate.ToString("yyyyMMdd"), BranchCode) 'JRNL + Date + BranchCode
                 Me.Text &= " - Journal Entry"
             Case ExtractType.PTUFile
-                sfdPath.FileName = String.Format("{0}{1}.PTU", sd.ToString("yyyyMMdd"), BranchCode) 'BranchCode + Date
+                sfdPath.FileName = String.Format("{0}{1}.PTU", CurrentDate.ToString("yyyyMMdd"), BranchCode) 'BranchCode + Date
                 Me.Text &= " - PTU File"
         End Select
 
@@ -567,6 +568,8 @@ Public Class frmExtractor
             AddProgress()
             Application.DoEvents()
         Next
+
+        FormInit()
 
         Dim verified_url As String
         Console.WriteLine("Split Count: " & txtPath.Text.Split(".").Count)
