@@ -13,7 +13,7 @@ Friend Module database
     Friend fbDataSet As New DataSet
     Friend conStr As String = String.Empty
 
-    Private DBversion As String = "1.2.2.5" 'Database version.
+    Private DBversion As String = "1.2.3.1" 'Database version.
     Private language() As String = _
         {"Connection error failed."} 'verification if the database is connected.
     ''' <summary>
